--- a/estilos.css
+++ b/estilos.css
@@ -22,3 +22,71 @@ img{
     max-height: 70vh;
     padding: 100px 0;
 }
+.menu{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo{
+    color: #f7efd8;
+    font-size: 25px;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+.menu .navbar ul li{
+    position: relative;
+    float: left;
+}
+.menu .navbar ul li a{
+    font-size: 18px;
+    padding: 20px;
+    color: #333128;
+    display: block;
+    font-weight: 600;
+}
+#menu{
+    display: none;
+}
+.menu-icono{
+    width: 25px;
+}
+.menu label{
+    cursor: pointer;
+    display: none;
+}
+.submenu{
+    position: relative;
+}
+.submenu #carrito{
+    display: none;
+}
+.submenu:hover #carrito{
+    display: block;
+    position: absolute;
+    right: 0;
+    backdrop-filter: blur(18px);
+    top: 100%;
+    z-index: 1;
+    background-color: #333128;
+    padding: 200px;
+    min-width: 400px;
+}
+
+table{
+    width: 100%;
+}
+th, td{
+    color: white;
+}
+.borrar{
+    background-color: green;
+    border-radius: 50%;
+    padding: 5px 10px;
+    color: white;
+    font-weight: 800;
+    cursor: pointer;
+}
