--- a/estilos.css
+++ b/estilos.css
@@ -90,3 +90,206 @@ th, td{
     font-weight: 800;
     cursor: pointer;
 }
+.header-content{
+    display: flex;
+}
+
+.header-txt{
+    flex-basis: 50%;
+}
+.header-txt span{
+    font-size: 16px;
+    color: greenyellow;
+    font-weight: 700;
+    margin-bottom: 15px;
+    display: block;
+}
+.header-txt h1{
+    font-size: 55px;
+    line-height: 1;
+    color: #333128;
+    margin-bottom: 25px;
+}
+p{
+    font-size: 16px;
+    color: #333128;
+    margin-bottom: 45px;
+}
+.btn-1{
+    display: inline-block;
+    padding: 13px 25px;
+    border-radius: 25px;
+    background-color: goldenrod;
+    text-transform: capitalize;
+}
+.header-img{
+    flex-basis: 50%;
+    text-align: center;
+}
+.header-img img{
+    width: 400px;
+}
+
+.informacion{
+    width: 70%;
+    box-shadow: 0 0 20px rgba(0, 0, 0,0.1);
+    padding: 25px 75px;
+    margin-top: -75px;
+    background-color: white;
+}
+.informacion-content{
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.informacion-1 img{
+    width: 35px;
+}
+h3{
+    font-size: 17px;
+    color: #333128;
+    text-transform: capitalize;
+}
+.informacion-1 p{
+    margin-bottom: 0;
+}
+.oferta{
+    padding: 100px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.oferta-1{
+    text-align: center;
+    flex-basis: calc(25% -20px);
+    box-shadow: 0 0 20px rgba(0, 0, 0,0.1);
+    padding: 35px;
+}
+.oferta-1 img{
+    width: 140px;
+    margin-bottom: 10px;
+}
+.oferta-1 p{
+    font-size: 15px;
+    margin: 0;
+    font-weight: 600;
+    color: goldenrod;
+}
+.product{
+    padding: 0 0 100px 0;
+    text-align: center;
+}
+.product h2{
+    font-size: 40px;
+    color: #333128;
+    text-transform: capitalize;
+    margin-bottom: 55px;
+}
+
+.product-content{
+    display: grid;
+    grid-template-columns: repeat(4, 1ft);
+    gap: 50px;
+}
+.product{
+    text-align: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0,0.1);
+    padding: 35px;
+}
+
+.product img{
+    width: 150px;
+    height: 130px;
+    margin-bottom: 10px;
+}
+.product h3{
+    color: green;
+    margin: 0;
+    color: #333128;
+    font-weight: 600;
+}
+
+.bnt-2{
+    display: inline-block;
+    margin-top: 15px;
+    padding: 7px 25px;
+    border-radius: 5px;
+    color: white;
+    background-color: greenyellow;
+}
+.service{
+    padding-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+.service-1{
+    flex-basis: 30%;
+    padding: 25px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.store{
+    width: 300px;
+    height: 250px;
+}
+
+.service-2{
+    flex-basis: 30%;
+    padding: 25px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.service-3{
+    flex-basis: 30%;
+    padding: 25px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contact{
+    padding-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+form{
+    display: flex;
+}
+input{
+    padding: 17px 35px;
+    border-radius: 25px;
+    border: 1px solid greenyellow;
+    outline: none;
+}
+.bnt-3{
+    margin-left: 10px;
+    color: white;
+    background-color: green;
+}
+.footer{
+    padding: 50px 0;
+    background-color: goldenrod;
+}
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+}
+.link h3{
+    color: white;
+    font-size: 17px;
+    margin-bottom: 10px;
+}
+.link a{
+    color: white;
+    font-size: 15px;
+    display: block;
+    margin-bottom: 10px;
+}
+.link a:hover{
+    color: white;
+}
