--- a/estilos.css
+++ b/estilos.css
@@ -22,7 +22,7 @@ img{
     max-height: 70vh;
     padding: 100px 0;
 }
-.menu{
+.menu-container{
     position: absolute;
     top: 0;
     left: 0;
@@ -37,11 +37,11 @@ img{
     font-weight: 800;
     text-transform: uppercase;
 }
-.menu .navbar ul li{
+.menu-container .navbar ul li{
     position: relative;
     float: left;
 }
-.menu .navbar ul li a{
+.menu-container .navbar ul li a{
     font-size: 18px;
     padding: 20px;
     color: #333128;
