--- a/estilos.css
+++ b/estilos.css
@@ -210,7 +210,7 @@ h3{
     font-weight: 600;
 }
 
-.bnt-2{
+.btn-2{
     display: inline-block;
     margin-top: 15px;
     padding: 7px 25px;
@@ -267,7 +267,7 @@ input{
     border: 1px solid greenyellow;
     outline: none;
 }
-.bnt-3{
+.btn-3{
     margin-left: 10px;
     color: white;
     background-color: green;
