--- a/estilos.css
+++ b/estilos.css
@@ -216,7 +216,7 @@ h3{
     padding: 7px 25px;
     border-radius: 5px;
     color: white;
-    background-color: greenyellow;
+    background-color: rgb(38, 61, 2);
 }
 .service{
     padding-bottom: 100px;
